<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Test1Activity">

    <LinearLayout
        android:id="@+id/linearLayoutContenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center|left"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:gravity="center|left"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/arrow"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="0dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/arrow_description"
                android:src="@drawable/chevron_left" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="248dp"
                android:layout_height="48dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:src="@drawable/progress"
                android:textAlignment="center"
                app:srcCompat="@drawable/progress" />

        </LinearLayout>

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/titulo1"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@color/subtitulo"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="313dp"
            android:layout_height="188dp"
            android:layout_marginBottom="16dp"
            android:text=" "
            app:srcCompat="@drawable/img1" />

        <TextView
            android:id="@+id/enunciado"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:text="@string/enunciado1"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textoOpcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:text="@string/informacion1"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@color/subtitulo"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/linearLayoutRespuestas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/res1"
                android:layout_width="313dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/secundario"
                android:text="@string/res21"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/primario"
                android:textSize="16sp"
                app:cornerRadius="8dp" />

            <Button
                android:id="@+id/res2"
                android:layout_width="313dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/secundario"
                android:text="@string/res31"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/primario"
                android:textSize="16sp"
                app:cornerRadius="8dp" />

            <Button
                android:id="@+id/res3"
                android:layout_width="313dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/secundario"
                android:text="@string/res11"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/primario"
                android:textSize="16sp"
                app:cornerRadius="8dp" />

            <Button
                android:id="@+id/res4"
                android:layout_width="313dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/secundario"
                android:text="@string/res41"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/primario"
                android:textSize="16sp"
                app:cornerRadius="8dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/primario"
                android:text="@string/botonNext1"
                android:textColor="@color/secundario" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

