<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Test5Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutContenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="0dp"
            android:paddingEnd="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:outlineProvider="none">

                <!-- Arrow alineado a la izquierda -->
                <ImageButton
                    android:id="@+id/buttonAtras"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="start"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/arrow_description"
                    android:src="@drawable/chevron_left" />

                <!-- Imagen centrada -->
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="48dp"
                    android:layout_weight="1"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:src="@drawable/progress5"
                    app:srcCompat="@drawable/progress5"
                    tools:srcCompat="@drawable/progress5" />
            </LinearLayout>


            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="16dp"
                android:text="@string/titulo5"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/primario"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="313dp"
                android:layout_height="188dp"
                android:layout_marginBottom="16dp"
                android:text=" "
                app:srcCompat="@drawable/img5" />

            <TextView
                android:id="@+id/enunciado"
                android:layout_width="313dp"
                android:layout_height="wrap_content"
                android:text="@string/enunciado5"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/primario"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/linearLayoutRespuestas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textoOpcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/informacion1"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textColor="@color/subtitulo"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/res1"
                    android:layout_width="313dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/secundario"
                    android:text="@string/res25"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textColor="@color/primario"
                    android:textSize="16sp"
                    app:cornerRadius="8dp" />

                <Button
                    android:id="@+id/res2"
                    android:layout_width="313dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/secundario"
                    android:text="@string/res35"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textColor="@color/primario"
                    android:textSize="16sp"
                    app:cornerRadius="8dp" />

                <Button
                    android:id="@+id/res3"
                    android:layout_width="313dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/secundario"
                    android:text="@string/res15"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textColor="@color/primario"
                    android:textSize="16sp"
                    app:cornerRadius="8dp" />

                <Button
                    android:id="@+id/res4"
                    android:layout_width="313dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/secundario"
                    android:text="@string/res45"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textColor="@color/primario"
                    android:textSize="16sp"
                    app:cornerRadius="8dp" />

                <Button
                    android:id="@+id/buttonSiguiente"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/primario"
                    android:text="@string/botonTerminar"
                    android:textColor="@color/secundario" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>